# video-scraper

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
benchmark/results/: benchmark_results.json
benchmark/scripts/: benchmark_crawler.py  benchmark_quick.py
demo/: GCP_DEMO_GUIDE.md  gcp_batch_test.py  local_verification.py  performance_demo.py  quickstart.py  requirements.txt
deploy/gcp/: Dockerfile  README.md  demo_quick_deploy.sh  deploy.sh  requirements.txt  worker.py
deploy/gcp/terraform/: main.tf
deploy/proxy/: README.md  local_proxy_setup.sh  simple_proxy_server.py
docs/: cost_optimization.md
examples/: async_scraping.py  batch_scraping.py  distributed_scraping.py  simple_download.py  youtube_scraper.py
python/videoscraper/: __init__.py  batch.py  cli.py  crawler.py  gcp_client.py  proxy.py  scraper.py  sites.py
src/: client.rs  config.rs  downloader.rs  error.rs  extractor.rs  lib.rs  pipeline.rs  storage.rs
tests/: __init__.py  test_config.py  test_crawler.py  test_scraper.py  test_youtube.py
utils/: reencode_videos.py
